# threereco-backend-v2

./: .gitignore  Cargo.toml  README.md
migrations/: 0001_initial_migration.down.sql  0001_initial_migration.up.sql  0002_collector_profile.down.sql  0002_collector_profile.up.sql  0003_business_profile.down.sql  0003_business_profile.up.sql  0004_collection.down.sql  0004_collection.up.sql  0005_big_decimal.down.sql  0005_big_decimal.up.sql  0006_update_collector_columns.down.sql  0006_update_collector_columns.up.sql
src/: config.rs  main.rs  router.rs  utilities.rs
src/authentication/: jwt.rs  roles.rs
src/data/entities/: business.rs  collection.rs  collector.rs  mod.rs  product.rs  user.rs
src/documentation/: api_documentation.rs
src/routes/: mod.rs
src/routes/authentication/: check.rs  login.rs
src/routes/business/: add.rs  delete.rs  update.rs  view.rs
src/routes/collection/: add.rs  delete.rs  update.rs  view.rs
src/routes/collector/: add.rs  delete.rs  mod.rs  search.rs  update.rs  view.rs
src/routes/export/: business.rs  collection.rs  collector.rs  mod.rs  product.rs
src/routes/mfa/: generate.rs  verify.rs
src/routes/product/: add.rs  delete.rs  update.rs  view.rs
src/routes/users/: add.rs  delete.rs  mod.rs  update.rs  view.rs
src/utils/: access_token.rs  mod.rs
src/utils/functions/: cns_external_scan.rs  mod.rs  spanning_backups.rs
