[package]
name = "threereco-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features = ["macros", "ws", "multipart", "http2"] }
bcrypt = "0.15.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
cron = "0.12.1"
csv = "1.3.0"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
libmath = "0.2.1"
md5 = "0.7.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "chrono",
    "macros",
    "json",
    "uuid",
    "bigdecimal",
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-cron-scheduler = "0.10.0"
tokio-util = { version = "0.7.10", features = ["full"] }
totp-rs = { version = "5.5.1", features = ["qr", "rand", "serde"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = [
    "add-extension",
    "trace",
    "cors"
] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
utoipa = { version = "4.2.0", features = [
    "axum_extras",
    "chrono",
    "uuid",
    "url",
    "decimal"
] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
